# test_executors

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-MIT.md  NOTICE  README.md
.github/workflows/: ci.yaml
scripts/: fmt
scripts/native/: check  clippy  docs  tests
scripts/wasm32/: check  clippy  docs  tests
src/: aruntime.rs  lib.rs  noop_waker.rs  pend_forever.rs  sys.rs
test_executors_proc/: Cargo.toml
test_executors_proc/scripts/: check  check_all  clippy  docs  fmt  tests
test_executors_proc/scripts/native/: tests
test_executors_proc/scripts/wasm32/: _env  check  clippy  docs  tests
test_executors_proc/src/: lib.rs
tests/: wasm_async_test.rs
