[package]
name = "test_executors"
version = "0.3.2"
edition = "2021"
description = "Simple async executors for testing."
license = "MIT OR Apache-2.0"
homepage = "https://sealedabstract.com/code/test_executors"
repository = "https://github.com/drewcrawford/test_executors"
keywords = ["testing","async","await","future"]
categories = ["asynchronous", "concurrency", "development-tools::testing"]
exclude = [".*"]
rust-version = "1.75.0"

[dependencies]
some_executor = "0.3.0"
#some_executor = {path = "../some_executor"}
priority = ">=0"
logwise = "0.2.2"
blocking_semaphore = ">=0"
test_executors_proc = "0.3.0"

# wasm-32 support
[target.'cfg(target_arch="wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-time = "1.1.0"
wasm-bindgen-futures = "0.4.49"

[target.'cfg(target_arch="wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.45"

[patch.crates-io]
logwise = {path = "../logwise"}