[package]
name = "test_executors"
version = "0.3.4"
edition = "2024"
description = "Simple async executors for testing."
license = "MIT OR Apache-2.0"
homepage = "https://sealedabstract.com/code/test_executors"
repository = "https://github.com/drewcrawford/test_executors"
keywords = ["testing","async","await","future"]
categories = ["asynchronous", "concurrency", "development-tools::testing"]
exclude = [".*"]
rust-version = "1.85.1"

[dependencies]
some_executor = "0.5.1"
logwise = "0.2"
blocking_semaphore = "0.1"
test_executors_proc = "0.3.0"

# wasm-32 support
[target.'cfg(target_arch="wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-time = "1.1"
wasm-bindgen-futures = "0.4"

[target.'cfg(target_arch="wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
