[package]
name = "test_executors_proc"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Procmacro for test executors"
homepage = "https://sealedabstract.com/code/test_executors"
repository = "https://github.com/drewcrawford/test_executors"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.37"

[dependencies.syn]
version = "2.0.87"
features = ["full"]
