[package]
name = "test_executors_proc"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Procmacro for test executors"
homepage = "https://sealedabstract.com/code/test_executors"
repository = "https://github.com/drewcrawford/test_executors"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.40"

[target.'cfg(target_arch="wasm32")'.dependencies]
wasm-bindgen-test = "0.3"

