[package]
name = "test_executors_proc"
version = "0.3.5"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Procmacro for test executors"
homepage = "https://sealedabstract.com/code/test_executors"
repository = "https://github.com/drewcrawford/test_executors"
keywords = ["testing","async","await"]
categories = ["development-tools::testing"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.40"
syn = {version = "2.0", features = ["full"]}
proc-macro-crate = "3.3"

[dev-dependencies]
test_executors = { path = "../" }

[target.'cfg(target_arch="wasm32")'.dependencies]
wasm-bindgen-test = "0.3"

